Regression: Impossible to extrude a main bone in rigging mode #110253

Closed
opened 2023-07-19 03:20:34 +02:00 by Yan Noël · 5 comments

System Information
Operating system: Windows 11 22H2 64bits
Graphics card: AMD 6800XT

Blender Version
4.0.0 - Main Pr109182

Short description of error
When we are rigging something, a character, or a bear, it's impossible to extrude a certain bone by pressing E. I tried it in 3.6.1, and it worked like a charm.

Exact steps for others to reproduce the error

  • Have a bone, edit mode, extrude it from the tip point, it works. (1)
  • Extrude the bone from the root point, the bone is created in the outliner but doesn't gets extruded. (2)
  • Move the root bone, you can see the bone being extruded appearing to be connected at the tip of the root bone. (3)

图片


Original description:

Just create a bone. Place it. Extrude it to the left, extrude it again for example to have 3 bones. Now, go back to the first bone, and try to extract it.

It work flawlessly in 3.6.1, but in 4.0.0 it looks that there is something wrong going on. Just try it by yourself, it takes 2s !

Thanks a lot, and I will follow this thread with a lot of attention :)

Thank you very much,

Yan

EDIT:

Oh, I made a video about it, because my english is not fluent. Here it is:
https://youtu.be/W28wP88xW9c

**System Information** Operating system: Windows 11 22H2 64bits Graphics card: AMD 6800XT **Blender Version** 4.0.0 - Main Pr109182 **Short description of error** When we are rigging something, a character, or a bear, it's impossible to extrude a certain bone by pressing E. I tried it in 3.6.1, and it worked like a charm. **Exact steps for others to reproduce the error** - Have a bone, edit mode, extrude it from the tip point, it works. (1) - Extrude the bone from the root point, the bone is created in the outliner but doesn't gets extruded. (2) - Move the root bone, you can see the bone being extruded appearing to be connected at the tip of the root bone. (3) ![图片](/attachments/03fac03a-fa98-458d-9cc6-5e74885a9af7) ------ Original description: Just create a bone. Place it. Extrude it to the left, extrude it again for example to have 3 bones. Now, go back to the first bone, and try to extract it. It work flawlessly in 3.6.1, but in 4.0.0 it looks that there is something wrong going on. Just try it by yourself, it takes 2s ! Thanks a lot, and I will follow this thread with a lot of attention :) Thank you very much, Yan EDIT: Oh, I made a video about it, because my english is not fluent. Here it is: https://youtu.be/W28wP88xW9c
231 KiB
Yan Noël added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-19 03:20:34 +02:00
Yan Noël changed title from Impossible to extrude a main bone in rigging mode to Impossible to extrude a main bone in rigging mode (Blender 4.0.0) 2023-07-19 03:40:37 +02:00
Member

Can confirm.

Also extruding from root to another direction creates a bone (verifiable inside the outliner), however it doesn't gets extruded to have any length.

Setting high priority due to recent regression

Can confirm. Also extruding from root to another direction creates a bone (verifiable inside the outliner), however it doesn't gets extruded to have any length. Setting high priority due to recent regression
Author

Can confirm.

Also extruding from root to another direction creates a bone (verifiable inside the outliner), however it doesn't gets extruded to have any length.

Thanks for confirming, I am not a fool !! =)
Oh, and thanks for tags editing, I am new to the forum so yeah, thanks.

> Can confirm. > > Also extruding from root to another direction creates a bone (verifiable inside the outliner), however it doesn't gets extruded to have any length. Thanks for confirming, I am not a fool !! =) Oh, and thanks for tags editing, I am new to the forum so yeah, thanks.
Member

I suspect this broke during C++ migration: 0b7d8a20bf
Will check

I suspect this broke during C++ migration: 0b7d8a20bfdf6e510c2fe77382a0d32a75bb5fc3 Will check
Member

Indeed caused by 0b7d8a20bf
@JacquesLucke ^

Indeed caused by 0b7d8a20bfdf6e510c2fe77382a0d32a75bb5fc3 @JacquesLucke ^
Pratik Borhade changed title from Impossible to extrude a main bone in rigging mode (Blender 4.0.0) to Regression: Impossible to extrude a main bone in rigging mode 2023-07-19 06:10:18 +02:00
Member

Guess I found the fix :)
#110256

Guess I found the fix :) https://projects.blender.org/blender/blender/pulls/110256
Pratik Borhade self-assigned this 2023-07-19 07:12:09 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-24 13:46:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110253
No description provided.