Fix #110253: Regression: Extruding bone from root fails

Caused by 0b7d8a20bfdf6e510c2fe77382a0d32a75bb5fc3
Above commit broke the operation because of this change: `if (do_extrude != 0)`
Earlier True/False/2 were used to determine the point of extrude.
Use enum to fix this and to improve the code readability.

Pull Request: https://projects.blender.org/blender/blender/pulls/110256